--- a/framework-res/AndroidManifest.xml
+++ b/framework-res/AndroidManifest.xml
@@ -239,6 +239,7 @@
     <protected-broadcast android:name="android.app.action.SYSTEM_UPDATE_POLICY_CHANGED"/>
     <protected-broadcast android:name="android.app.action.DEVICE_OWNER_CHANGED"/>
     <protected-broadcast android:name="android.intent.action.PHB_STATE_CHANGED"/>
+    <protected-broadcast android:name="com.meizu.safe.ACTION_BLOCK_LOCKED_SCREEN_SHOW"/>
     <eat-comment/>
     <eat-comment/>
     <permission-group android:description="@string/permgroupdesc_contacts" android:icon="@drawable/perm_group_contacts" android:label="@string/permgrouplab_contacts" android:name="android.permission-group.CONTACTS" android:priority="100"/>
